[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboToald"
version = "0.1.0"
description = "Discord bot for EverQuest guild management (SSO, raids, DS, batphone, API)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "disnake[voice]>=2.12.0",
    "requests",
    "sqlalchemy",
    "sqlalchemy-utils",
    "cryptography",
    "validators",
    "tzdata",
    "python-dateutil",
    "fastapi",
    "uvicorn",
    "websockets",
    "pydantic",
    "alembic",
    "httpx",
    "gspread",
    "google-auth",
    "qrcode[pil]",
    "jinja2",
    "python-multipart",
    "geoip2fast",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=6",
    "freezegun>=1.5",
    "ruff>=0.8",
]

[project.scripts]
robotoald = "batphone:main"

[tool.setuptools]
py-modules = ["batphone"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["roboToald*"]

[tool.setuptools.package-data]
"roboToald" = [
    "alembic.ini",
    "migrations/**/*",
    "raid_migrations/**/*",
]
"roboToald.words" = ["*.list"]
"roboToald.api" = ["templates/**/*.html"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E712"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["roboToald"]
branch = true
omit = [
    "*/migrations/*",
    "*/raid_migrations/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
